[package]
name = "sip-honeypot"
version = "0.1.1"
authors = ["2026, Philippe TEMESI"]
description = "A SIP honeypot for detecting and analyzing SIP attacks"
repository = "https://www.tems.be"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
structopt = "0.3"
chrono = "0.4"
lazy_static = "1.4"
anyhow = "1.0"
regex = "1.9"
users = "0.11"  # Pour les informations utilisateur

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
nix = "0.27"  # Alternative à libc (optionnel, vous pouvez garder libc si vous préférez)

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true  # Remplacé "symbols" par true (plus simple)
incremental = true

