[package]
name = "sip-honeypot"
version = "0.1.1"
authors = ["2026, Philippe TEMESI"]
description = "A SIP honeypot for detecting and analyzing SIP attacks"
repository = "https://www.tems.be"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
structopt = "0.3"
chrono = "0.4"
lazy_static = "1.4"
anyhow = "1.0"
regex = "1.9"
users = "0.11"

[target.'cfg(unix)'.dependencies]
nix = "0.27"
libc = "0.2"  # Ajout de libc pour les redirections de descripteurs

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
incremental = true

